# device-location

./: README.md  manage.py  pyproject.toml
device_location/: asgi.py  settings.py  urls.py  wsgi.py
device_location_app/: apps.py  models.py  serializers.py  urls.py  views.py
device_location_app/management/commands/: populate_data.py
device_location_app/migrations/: 0001_initial.py
